kubernetes/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: production
  labels:
    app: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${BACKEND_HOST}
        - ${FRONTEND_HOST}
      secretName: nginx-tls
  rules:
  - host: ${BACKEND_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 80
      - path: /static/
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
  - host: ${FRONTEND_HOST}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-svc
              port:
                number: 80
